# slack-ai-bot

./: .coverage  .gitignore  Makefile  README.md  agent_development_guidelines.md  config.yaml  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
agents/: __init__.py  agent_state.py  base_agent.py  direct_agent.py  incident_agent.py  knowledge_agent.py  langgraph_agent.py  main_agent.py  workflow.py
config/: logging.py  prompts.py  settings.py
docs/: system_architecture.md
documents/: document_retriever.py
events/: app_mention_handler.py  event_handler.py
knowledge_base/: chroma_writer.py  confluence_document_processor.py  confluence_loader.py  confluence_url_builder.py  document_processor.py  document_splitter.py  job_runner.py  knowledge_base_loader.py  knowledge_base_writer.py  run_job.py  token_document_splitter.py  token_splitter.py  url_builder.py
slack/: slack_events_handlers.py
tests/: conftest.py
tests/agents/: test_direct_agent.py  test_incident_agent.py  test_knowledge_agent.py  test_main_agent.py
tests/knowledge_base/: test_chroma_writer.py  test_confluence_document_processor.py  test_confluence_loader.py  test_job_runner.py  test_token_document_splitter.py
tests/utils/: test_llm.py
utils/: llm.py
